Fixed offers-list display on mobile & back-to-top button on hotel detail page position depending on floating bar collapse state

--- a/src/styles/components/offers-list.less
+++ b/src/styles/components/offers-list.less
@@ -10,6 +10,10 @@ rewards-list {
   justify-content: left;
   margin: 0 @baseline/4 @baseline 0;
 
+  .viewport-mobile &{
+    margin-right: 0;
+  }
+
   offer-item,
   reward-item {
     border-radius: @radius*2;
@@ -115,12 +119,12 @@ rewards-list {
       }
     }
 
-    @media only screen and @large-mobile-max {
+    .viewport-mobile &{
 
-      flex: 0 0 ~"calc(100% - 5px)";
-      height: auto;
-      width: ~"calc(100% - 5px)";
+      flex: 100%;
+      width: 100%;
       padding-bottom: 16px;
+      margin: 0 0 @baseline;
 
       span {
         position: relative;
