--- a/src/styles/views/hotel-detail.less
+++ b/src/styles/views/hotel-detail.less
@@ -6,7 +6,7 @@ hotel-detail {
 
   .back-to-top{
     position: fixed;
-    bottom: 150px;
+    bottom: 50px;
     right: 20px;
     width: 60px;
     height: 60px;
@@ -20,6 +20,9 @@ hotel-detail {
     .viewport-mobile &{
       bottom: 80px;
       right: 10px;
+    }
+    .floating-bar-active &{
+      bottom: 150px;
     }
     span{
       position: absolute;
